--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 certifi==2022.12.7
 charset-normalizer==2.1.1
+et-xmlfile==1.1.0
 idna==3.4
+numpy==1.24.0
+openpyxl==3.0.10
+pandas==1.5.2
 pync==2.0.3
 python-dateutil==2.8.2
+pytz==2022.7
 requests==2.28.1
 six==1.16.0
 urllib3==1.26.13
